# benefice

./: .gitignore  Cargo.nix  Cargo.toml  examples.txt  flake.nix  rust-toolchain.toml
.github/: CODEOWNERS
.github/workflows/: commisery.yml  dependabot.yml  lint.yml  release.yml  test.yml  update.yml
crates/auth/: Cargo.toml
crates/auth/src/: lib.rs
crates/auth/src/providers/github/: mod.rs  routes.rs
crates/auth/tests/: integration.rs
crates/auth/tests/protected/: mod.rs
crates/auth/tests/providers/: github.rs
crates/auth/tests/status/: mod.rs
src/: auth.rs  data.rs  drawbridge.rs  examples.rs  github.rs  job.rs  jobs.rs  main.rs  ports.rs  redirect.rs  reference.rs  root_get.html  secret.rs  templates.rs  uuid_get.html
src/auth/: context.rs  key.rs  mod.rs  session.rs  sessions.rs  sid.rs  user.rs
templates/: idx.html  job.html  root_get.html  uuid_get.html
