[package]
name = "benefice"
version = "0.2.0"
edition = "2021"

[dependencies]
aes-gcm = { version = "0.9.4", default-features = false, features = ["aes", "std"] }
anyhow = { version = "1.0.66", default-features = false, features = ["std"] }
askama = { version = "0.11.1", default-features = false }
axum = { version = "0.5.17", default-features = false, features = ["headers", "json", "multipart", "query"] }
axum-extra = { version = "0.3.7", default-features = false, features = ["cookie"] }
base64 = { version = "0.13.1", default-features = false }
clap = { version = "4.1.6", default-features = false, features = ["derive", "error-context", "help", "std", "usage", "wrap_help"] }
confargs = { version = "0.1.1", default-features = false }
enarx-config = { version = "0.6.1", default-features = false }
futures-util = { version = "0.3.23", default-features = false }
humansize = { version = "2.1.3", default-features = false, features = ["impl_style"] }
num_cpus = { version = "1.14.0", default-features = false }
once_cell = { version = "1.16.0", default-features = false }
openidconnect = { version = "2.5.0", default-features = false, features = ["rustls-tls", "reqwest"] }
rand = { version = "0.8.4", default-features = false }
reqwest = { version = "0.11.14", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1.0.150", default-features = false }
serde_json = { version = "1.0.93", default-features = false, features = ["std"] }
tempfile = { version = "3.3.0", default-features = false }
tokio = { version = "1.22.0", default-features = false, features = ["macros", "process", "rt-multi-thread", "io-util", "fs", "sync"] }
toml = { version = "0.7.2", default-features = false, features = ["parse"] }
tower-http = { version = "0.3.5", default-features = false, features = ["trace"] }
tracing = { version = "0.1.37", default-features = false, features = ["std", "release_max_level_info"] }
tracing-subscriber = { version = "0.3.11", default-features = false, features = ["ansi", "env-filter", "std", "tracing-log", "json"] }
uuid = { version = "1.2.2", default-features = false, features = ["v4"] }
zeroize = { version = "1.5.7", default-features = false, features = ["std"] }
